--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: '16.x'
       # Install the dependencies need to build the app
       - name: Install Dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
       # Runs a set of commands to build
       - name: Build
         run: npm run build --prod
@@ -49,7 +49,7 @@ jobs:
           node-version: '16.x'
       # Install the dependencies need to build the app
       - name: Install Dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
       # build the app
       - name: Build the app artifact for prod
         run: npm run build --prod
