--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install --legacy-peer-deps
       # Runs a set of commands to build
       - name: Build
-        run: npm run build --prod --omit=dev
+        run: npm run build --omit=dev
       # sotre the artifact
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
@@ -52,7 +52,7 @@ jobs:
         run: npm install --legacy-peer-deps
       # build the app
       - name: Build the app artifact for prod
-        run: npm run build --prod --omit=dev
+        run: npm run build --omit=dev
       # ddeploy the app artifact to firebase
       - name: Deploy angular app to Firebase
         uses: w9jds/firebase-action@master
